# so-developer-survey-analysis

./: .gitignore  README.md  main.py  pyproject.toml
docs/: schema_crosswalk.md
notebooks/: 01_data_cleaning.ipynb  02_exploratory_analysis.ipynb  03_sql_analysis.ipynb
sql/: queries.sql
