[project]
name = "so-developer-survey-analysis"
version = "0.1.0"
description = "Data Analyst trends from the Stack Overflow Developer Survey (2023 to 2025) focused on AI adoption."
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.51",
]
